# neofetch-desktop

./: README.md  meson.build
data/: meson.build  neofetch-desktop.desktop.in.in
snap/: snapcraft.yaml
src/: neofetch-desktop.c
